# ChangeLog for kde-misc/krename
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/krename/ChangeLog,v 1.34 2006/08/15 19:33:20 carlo Exp $

*krename-3.0.12 (15 Aug 2006)

  15 Aug 2006; Carsten Lohrke <carlo@gentoo.org> +krename-3.0.12.ebuild:
  Version bump.

*krename-3.0.11-r1 (04 May 2006)

  04 May 2006; Carsten Lohrke <carlo@gentoo.org> +krename-3.0.11-r1.ebuild:
  Install service menu files in correct location.

  26 Apr 2006; Mark Loeser <halcy0n@gentoo.org> krename-3.0.11.ebuild:
  Stable on x86; bug #129474

  17 Apr 2006; Markus Rothe <corsair@gentoo.org> krename-3.0.11.ebuild:
  Stable on ppc64; bug #129474

  14 Apr 2006; <nixnut@gentoo.org> krename-3.0.11.ebuild:
  Stable on ppc. Bug # 129474

  11 Apr 2006; Jason Wever <weeve@gentoo.org> krename-3.0.11.ebuild:
  Stable on SPARC wrt bug #129474.

  10 Apr 2006; Chris White <chriswhite@gentoo.org> krename-3.0.11.ebuild:
  Marked amd64 stable for krename-3.0.11 bug #129474.

  10 Apr 2006; Marcus D. Hanwell <cryos@gentoo.org> -krename-3.0.6.ebuild,
  -krename-3.0.10.ebuild:
  Pruned old versions.

  26 Feb 2006; Markus Rothe <corsair@gentoo.org> krename-3.0.11.ebuild:
  Added ~ppc64

*krename-3.0.11 (23 Feb 2006)

  23 Feb 2006; Carsten Lohrke <carlo@gentoo.org> +krename-3.0.11.ebuild:
  Version bump.

*krename-3.0.10 (04 Feb 2006)

  04 Feb 2006; Dominik Stadler <centic@gentoo.org> +krename-3.0.10.ebuild:
  Add new Version 3.0.10, fixes Bug 118707

  24 Dec 2005; Michael Hanselmann <hansmi@gentoo.org> krename-3.0.9.ebuild:
  Stable on ppc.

  22 Nov 2005; Marcus D. Hanwell <cryos@gentoo.org> -krename-3.0.5.ebuild,
  -krename-3.0.8.ebuild, krename-3.0.9.ebuild:
  Stable on amd64, bug 112835. Cleaned out old versions.

  19 Nov 2005; Jason Wever <weeve@gentoo.org> krename-3.0.9.ebuild:
  Stable on SPARC wrt bug #112835.

  19 Nov 2005; Mark Loeser <halcy0n@gentoo.org> krename-3.0.9.ebuild:
  Stable on x86; bug #112835
