@@ -1,5 +1,10 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST krename-3.0.11.tar.bz2 763796 RMD160 14e35e5b7316080164bf94b6adce1c7083fa8834 SHA1 797cba3565b81999619651a36341dba54a35245c SHA256 afe440ff7d505401af9130ff04582277800b7ba7570a7d110a7702c0c6303a7f
+DIST krename-3.0.12.pdf 525778 RMD160 3fa3af24ddc6ce2d79d74858c563383400be39f2 SHA1 53d641dddf3a7c57b775632aeba885ba49b1b8ef SHA256 7c93bac59a508b8ca1e92409d0b5bf3b772bc518c1d2e0fa11d2e5a52dda4849
 DIST krename-3.0.12.tar.bz2 747116 RMD160 ee44726b7648d3531597eee04b4d01873d2876d2 SHA1 1756f4ccdbff733d2ac426a4aa316891b0b837bb SHA256 ccc4ebe11f65255265857623c2a9b3a50c0720c8d7201606faf6faa4b47d6827
+DIST krename-3.0.13.tar.bz2 976610 RMD160 195c65f5ec272bf9897c3397c35157c3a2b51227 SHA1 26bcdafbc38b5595511276a794812e25da673b82 SHA256 901eda54c711289426f3312a3309133c5cc9f49ca2eabf0bc523ecb74af3089f
 DIST krename-3.0.3.pdf 640098 RMD160 3edfc04baa5cecb8015b5616e34e8702cca54788 SHA1 8b14ba3ad2205cda4fa8604f945cbe059ada91e3 SHA256 042b8345a6a346c7611ea28a772a12cb107e9c40c655ef2bf8b0fd444753c9ce
 DIST krename-3.0.9.tar.bz2 723042
 EBUILD krename-3.0.11-r1.ebuild 860 RMD160 76c8a25e7e154d1368618c71a78c0ab94734bea1 SHA1 b0a1244da7e25e017f8ed08ecabd3bc2325665a6 SHA256 59c4becaaab956fd898edc5668f9aad71699bdf4b033fa953a9d368d2dab05bf
@@ -10,18 +15,22 @@ EBUILD krename-3.0.11.ebuild 701 RMD160 6123904840712bb119158a46195211159956fe11
 MD5 f806d6cdc85de58a9a081e5b5e4fd840 krename-3.0.11.ebuild 701
 RMD160 6123904840712bb119158a46195211159956fe11 krename-3.0.11.ebuild 701
 SHA256 834c84b1e4fc3419530cf66583340edbece92024cf21beab8a191de42ab402a0 krename-3.0.11.ebuild 701
-EBUILD krename-3.0.12.ebuild 705 RMD160 9bf8e876c39b0d803672dfb06289d76bdc9fe789 SHA1 060b1fcca03ffe0488972ee56f0a4d19e79c149c SHA256 9585af6ad5a95f3389eca740c03804ee929f8992581acd3a3d53431204b1404b
-MD5 4aa02e303a13af28bb9a5692b6807c12 krename-3.0.12.ebuild 705
-RMD160 9bf8e876c39b0d803672dfb06289d76bdc9fe789 krename-3.0.12.ebuild 705
-SHA256 9585af6ad5a95f3389eca740c03804ee929f8992581acd3a3d53431204b1404b krename-3.0.12.ebuild 705
+EBUILD krename-3.0.12.ebuild 712 RMD160 adf9b2ab5cca60067eb6d5d1b0c651f7c146fb85 SHA1 5fcff3e0baf1574e5b478a6a4f10661434a653f8 SHA256 1577e13fd92622bccb2cd4b0e9cd3d6abc98c8bec812750c2d6437507d25f7f0
+MD5 1901aace2b3747082ffeb88baf716e92 krename-3.0.12.ebuild 712
+RMD160 adf9b2ab5cca60067eb6d5d1b0c651f7c146fb85 krename-3.0.12.ebuild 712
+SHA256 1577e13fd92622bccb2cd4b0e9cd3d6abc98c8bec812750c2d6437507d25f7f0 krename-3.0.12.ebuild 712
+EBUILD krename-3.0.13.ebuild 987 RMD160 7fcd2aa1bdf2e5ae87216574bc582671964fa9a4 SHA1 92ec988d199b1c700d59e2de51f6bf38f977c74e SHA256 028669e88c0918250efdf0fdb079b7a926ab5134b5e3800bd293dfda6ea2fcc0
+MD5 a8da05247c303e5c3dcb102a9e783d60 krename-3.0.13.ebuild 987
+RMD160 7fcd2aa1bdf2e5ae87216574bc582671964fa9a4 krename-3.0.13.ebuild 987
+SHA256 028669e88c0918250efdf0fdb079b7a926ab5134b5e3800bd293dfda6ea2fcc0 krename-3.0.13.ebuild 987
 EBUILD krename-3.0.9.ebuild 693 RMD160 ac6c820918402f7ebecbc8da2329e947d47e0951 SHA1 04a7c853d983fef3c9dd093729a5d66a19967508 SHA256 0976518fdf4160fa637832d348b06c5394d96cdec8b84d1b0739112bc0121445
 MD5 69674371a7bbb9daff33f8e4ceb64433 krename-3.0.9.ebuild 693
 RMD160 ac6c820918402f7ebecbc8da2329e947d47e0951 krename-3.0.9.ebuild 693
 SHA256 0976518fdf4160fa637832d348b06c5394d96cdec8b84d1b0739112bc0121445 krename-3.0.9.ebuild 693
-MISC ChangeLog 8370 RMD160 be8be5b4c334f68881eacd66f0ccda22ca18e939 SHA1 44af8744f46a6e3bd4608fe175177df90c506f10 SHA256 967cfd5ee115c689a937ecc7f9c6982a5cb2b941963abe69c3c098bef7d682f8
-MD5 1b4b3d4add6602fe1b27a9804efe02a0 ChangeLog 8370
-RMD160 be8be5b4c334f68881eacd66f0ccda22ca18e939 ChangeLog 8370
-SHA256 967cfd5ee115c689a937ecc7f9c6982a5cb2b941963abe69c3c098bef7d682f8 ChangeLog 8370
+MISC ChangeLog 8658 RMD160 6f6d3a6a84bdac948acac2bd04c6431107a73c0a SHA1 0ec8c2650c61412fb655ac09570c598f2cd2b40a SHA256 fedfef1932c740182f0583cfced9c1debec5c309c5622948c2bd0ac505ce643c
+MD5 499dbe1ce895f77588a0846723d9b70f ChangeLog 8658
+RMD160 6f6d3a6a84bdac948acac2bd04c6431107a73c0a ChangeLog 8658
+SHA256 fedfef1932c740182f0583cfced9c1debec5c309c5622948c2bd0ac505ce643c ChangeLog 8658
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
 MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 metadata.xml 156
@@ -32,9 +41,19 @@ SHA256 a158cb0462670437ff195e61d84e7d27489542a6beb603a71dba1ce7866f48bb files/di
 MD5 485ac360ec1bab3d1212b83a837d3ef5 files/digest-krename-3.0.11-r1 479
 RMD160 a05ea331d45d762a60cf016122f6323eb5f7c3c2 files/digest-krename-3.0.11-r1 479
 SHA256 a158cb0462670437ff195e61d84e7d27489542a6beb603a71dba1ce7866f48bb files/digest-krename-3.0.11-r1 479
-MD5 b57896e03cfce49885ca5ba03485a94b files/digest-krename-3.0.12 479
-RMD160 85313f9e179511ef83f0599a2ace5e47fef70f0d files/digest-krename-3.0.12 479
-SHA256 4bd5bf2722fd8a55cc935e390fa728d9a33b47b444b2bb440a42905de6d9e3b7 files/digest-krename-3.0.12 479
+MD5 4adcf54d86bc923ae9daf59b2cd33dd7 files/digest-krename-3.0.12 482
+RMD160 2687044de74d7c526b0fd93e9bfd3ced1795d63c files/digest-krename-3.0.12 482
+SHA256 45e27d927bf9352e80b8add3be5ff9a96fb11ee038c1b5fc1e6c74e443e609ae files/digest-krename-3.0.12 482
+MD5 45d080a9fb345163df1e2ee8b266b9b4 files/digest-krename-3.0.13 482
+RMD160 4d7d9fbb84e8b8bf3b364eba2ab6a8a8c77ac7fd files/digest-krename-3.0.13 482
+SHA256 1f6f673f40b3ed57a6419bc5657c3fc8e6a82ed6ac6a378434b934e07893a3db files/digest-krename-3.0.13 482
 MD5 fea689d8b2ad19f9ba41805303b6b245 files/digest-krename-3.0.9 298
 RMD160 2130b3590093af8e0547a7f3a9ca3f7024241fd2 files/digest-krename-3.0.9 298
 SHA256 b012824c57dbb92408c1d32d1add8334b536a307a56e67c470a5b26e46e990fb files/digest-krename-3.0.9 298
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.5 (GNU/Linux)
+
+iD8DBQFFeWIYQVeVlgLp4x8RAiB7AJ4hQmy5oZ+3jU9U15zNZD6/aFp76ACeNCE1
+y6p3G5Sgeb+CSlqxThN6dWE=
+=Iuai
+-----END PGP SIGNATURE-----
