@@ -1,6 +1,6 @@
+MD5 98141b57a29984af265aeecfd7ea8b93 krename-3.0.12.pdf 525778
+RMD160 3fa3af24ddc6ce2d79d74858c563383400be39f2 krename-3.0.12.pdf 525778
+SHA256 7c93bac59a508b8ca1e92409d0b5bf3b772bc518c1d2e0fa11d2e5a52dda4849 krename-3.0.12.pdf 525778
 MD5 55a2747f6686044270a5349882bd9985 krename-3.0.12.tar.bz2 747116
 RMD160 ee44726b7648d3531597eee04b4d01873d2876d2 krename-3.0.12.tar.bz2 747116
 SHA256 ccc4ebe11f65255265857623c2a9b3a50c0720c8d7201606faf6faa4b47d6827 krename-3.0.12.tar.bz2 747116
-MD5 0e598b7acf88e80bf76fdfd22d8c7929 krename-3.0.3.pdf 640098
-RMD160 3edfc04baa5cecb8015b5616e34e8702cca54788 krename-3.0.3.pdf 640098
-SHA256 042b8345a6a346c7611ea28a772a12cb107e9c40c655ef2bf8b0fd444753c9ce krename-3.0.3.pdf 640098
