@@ -1,0 +1,6 @@
+MD5 98141b57a29984af265aeecfd7ea8b93 krename-3.0.12.pdf 525778
+RMD160 3fa3af24ddc6ce2d79d74858c563383400be39f2 krename-3.0.12.pdf 525778
+SHA256 7c93bac59a508b8ca1e92409d0b5bf3b772bc518c1d2e0fa11d2e5a52dda4849 krename-3.0.12.pdf 525778
+MD5 93b4a74d0ef67213a5947dc5fb10b9cf krename-3.0.13.tar.bz2 976610
+RMD160 195c65f5ec272bf9897c3397c35157c3a2b51227 krename-3.0.13.tar.bz2 976610
+SHA256 901eda54c711289426f3312a3309133c5cc9f49ca2eabf0bc523ecb74af3089f krename-3.0.13.tar.bz2 976610
