@@ -1,6 +1,13 @@
 # ChangeLog for kde-misc/krename
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/krename/ChangeLog,v 1.34 2006/08/15 19:33:20 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/krename/ChangeLog,v 1.35 2006/12/08 13:01:04 deathwing00 Exp $
+
+*krename-3.0.13 (08 Dec 2006)
+
+  08 Dec 2006; Ioannis Aslanidis <deathwing00@gentoo.org>
+  krename-3.0.12.ebuild, +krename-3.0.13.ebuild:
+  Version bump. Fixed documentation for versions 3.0.12 and above to use
+  documentation 3.0.12. Added localization support to version 3.0.13.
 
 *krename-3.0.12 (15 Aug 2006)
 
